manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-mcp-server
  labels:
    app: quarkus-mcp-server
    backstage.io/kubernetes-id: quarkus-mcp-server
spec:
  selector:
    matchLabels:
      app: quarkus-mcp-server
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: quarkus-mcp-server
        backstage.io/kubernetes-id: quarkus-mcp-server
    spec:
      containers:
        - name: quarkus-mcp-server
          image: quay.io/pminkows/quarkus-mcp-server:1.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 1024Mi
