manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-mcp-server
  labels:
    app: quarkus-mcp-server
    backstage.io/kubernetes-id: quarkus-mcp-server
spec:
  type: ClusterIP
  selector:
    app: quarkus-mcp-server
  ports:
    - port: 8080
      protocol: TCP
      name: http
